# tarsnap

./: .gitignore  .travis.yml  AGENTS.md  BUILDING  COPYING  Dockerfile  Makefile.am  NEWS.md  README.md  STYLE  _tarsnap  actarsnap.m4  configure.ac  larchive-version-n  larchive-version-s  tar-version  tsserver
.github/workflows/: compile.yml
ccache/: ccache_entry.c  ccache_internal.h
chunks/: chunks_delete.c  chunks_directory.c  chunks_internal.h  chunks_read.c  chunks_stats.c  chunks_stats_internal.c  chunks_write.c
crypto/: crypto.h  crypto_entropy.c  crypto_file.c  crypto_hash.c  crypto_keys.c  crypto_rsa.c  crypto_session.c  crypto_verify_bytes.c  sha256.h
datastruct/: rwhashtab.c
glue/: archive_multitape.c  tape.c
keygen/: keygen.c  keygen.h  keygen_actual.c  keygen_network.c  tarsnap-keygen.1  tarsnap-keygen.1-man  tarsnap-keygen.1-mdoc
keymgmt/: keymgmt.c  tarsnap-keymgmt.1  tarsnap-keymgmt.1-man  tarsnap-keymgmt.1-mdoc
keyregen/: keyregen.c  tarsnap-keyregen.1-man  tarsnap-keyregen.1-mdoc
lib/: platform.h
lib-platform/: platform.h
lib-platform/crypto/: crypto_scrypt.c  crypto_scrypt.h
lib-platform/network/: tsnetwork_cork.c  tsnetwork_cork.h
lib-platform/util/: fileutil.c  fileutil.h  getfstype.c  getfstype.h  memlimit.c  memlimit.h  ts_getfstype.c  ts_getfstype.h
lib/ABI/: extract-abi.sh
lib/crypto/: crypto.h  crypto_aesctr.c  crypto_compat.c  crypto_compat.h  crypto_dh.c  crypto_dh_group14.c  crypto_entropy.c  crypto_file.c  crypto_hash.c  crypto_internal.h  crypto_keyfile.c  crypto_keys.c  crypto_keys_init.c  crypto_keys_server.c  crypto_keys_subr.c  crypto_passwd_to_dh.c  crypto_rsa.c  crypto_scrypt-nosse.c  crypto_scrypt-sse.c  crypto_scrypt.c  crypto_scrypt.h  crypto_scrypt_smix.c  crypto_scrypt_smix.h  crypto_scrypt_smix_sse2.c  crypto_scrypt_smix_sse2.h  crypto_session.c  scrypt-nosse.c  scrypt-sse.c  scrypt.h  scrypt_cpuperf.c  scrypt_cpuperf.h  scryptenc.c  scryptenc.h  sha256.c  sha256.h
lib/datastruct/: patricia.c  patricia.h  rwhashtab.c  rwhashtab.h
lib/keyfile/: keyfile.c  keyfile.h
lib/netpacket/: netpacket.h  netpacket_delete.c  netpacket_directory.c  netpacket_hmac.c  netpacket_internal.h  netpacket_op.c  netpacket_read.c  netpacket_register.c  netpacket_transaction.c  netpacket_write.c  packets.txt
lib/netproto/: netproto.c  netproto.h  netproto_connect.c  netproto_internal.h  netproto_keyexchange.c  netproto_packet.c
lib/network/: network.h  network_buf.c  network_connect.c  network_cork.c  network_internal.h  network_select.c  network_writeq.c  tsnetwork.h  tsnetwork_buf.c  tsnetwork_bwlimit.c  (+7 more)
libarchive/: archive.h  archive.h.in  archive_check_magic.c  archive_entry.c  archive_entry.h  archive_entry_link_resolver.c  archive_entry_private.h  archive_entry_stat.c  archive_platform.h  archive_private.h  archive_read.c  archive_read_disk.c  archive_read_disk_entry_from_file.c  archive_read_disk_set_standard_lookup.c  archive_read_extract.c  archive_read_open_file.c  archive_read_open_filename.c  archive_read_private.h  archive_read_support_compression_bzip2.c  archive_read_support_compression_compress.c  archive_read_support_compression_gzip.c  archive_read_support_compression_none.c  archive_read_support_compression_program.c  archive_read_support_compression_xz.c  archive_read_support_format_ar.c  archive_read_support_format_cpio.c  archive_read_support_format_empty.c  archive_read_support_format_iso9660.c  archive_read_support_format_mtree.c  archive_read_support_format_tar.c  archive_read_support_format_zip.c  archive_string.c  archive_string_sprintf.c  archive_util.c  archive_virtual.c  archive_windows.c  archive_windows.h  archive_write.c  archive_write_disk.c  archive_write_disk_set_standard_lookup.c  (+9 more)
libcperciva/: COPYRIGHT
m4/: check_broken_tcp_nopush.m4  check_darwin_paths.m4  check_disable_compiler_warnings.m4  check_freebsd_portrange_bug.m4  check_libcperciva_posix.m4  check_linux_ext2fs.m4  check_mdoc_or_man.m4  check_memlimit_support.m4  check_posix_sh.m4  check_solaris_c99.m4  check_solaris_paths.m4
misc/: describe-options.txt
multitape/: chunkify.c  chunkify.h  multitape_chunkiter.c  multitape_fsck.c  multitape_internal.h  multitape_metaindex.c  multitape_read.c  multitape_transaction.c  multitape_write.c
netpacket/: netpacket.h  netpacket_internal.h  netpacket_op.c  netpacket_write.c
netproto/: netproto.c  netproto.h  netproto_connect.c  netproto_keyexchange.c
network/: network.h  network_buf.c  network_connect.c  network_cork.c  network_select.c  network_writeq.c
pkg/: COPYRIGHT  DEBIAN.md  README  README.md
recrypt/: recrypt.c  tarsnap-recrypt.1-man  tarsnap-recrypt.1-mdoc
release-tools/: mdoc2man.awk  mdoc2man.sh  mkdebsource.sh  mktarball.sh
snap/: snapcraft.yaml
storage/: storage.h  storage_directory.c  storage_internal.h  storage_read.c  storage_transaction.c  storage_write.c
tar/: bsdtar.1  bsdtar.c  bsdtar.h  bsdtar_cygwin.c  bsdtar_cygwin.h  bsdtar_platform.h  bsdtar_windows.c  bsdtar_windows.h  cmdline.c  config_freebsd.h  getdate.c  matching.c  read.c  siginfo.c  subst.c  tarsnap.1  tarsnap.1-man.in  tarsnap.1-mdoc.in  tarsnap.1.in  tarsnap.conf.5  tarsnap.conf.5-man.in  tarsnap.conf.5-mdoc.in  tarsnap.conf.5.in  tarsnap.conf.sample  tarsnap_opt.h  tree.c  tree.h  util.c  write.c
tests/: 01-trivial.sh  02-c-dry-run-no-keyfile.sh  03-c-dry-run-fake-keyfile.sh  04-c-d-real-keyfile.sh  05-passphrase.sh  06-progress-output-pb.good  06-progress-output-v.good  06-progress-output-vpb-1k.good  06-progress-output-vpb-20k.good  06-progress-output.sh  07-selecting-files-include-exclude.good  07-selecting-files-include.good  07-selecting-files-nT-full.good  07-selecting-files-nT-partial.good  07-selecting-files.sh  08-substitution.sh  fake-passphrased.keys  fake.keys  shared_test_functions.sh  shared_valgrind_functions.sh  test_tarsnap.sh
tools/: check_c_function_newline.py  check_includes_alphabetical.py  check_man.py  man_to_argparse.py  man_to_completion.py  man_to_zsh.py  style_utils.py
util/: entropy.c  hexify.c  hexlink.h  sigquit.c  sysendian.h  warnp.h
(+202 files in other folders)
